--- a/config.toml
+++ b/config.toml
@@ -176,7 +176,7 @@ level = "Professional working proficiency"
 
 [[languages.en.params.spoken_languages]]
 name = "Chinese"
-level = "Professional working proficiency"
+level = "Professional working proficiency. HSK6 220/300"
 
 ################################################################################
 # Japanese
